# folio-mapper

./: .gitignore  FOLIO Taxonomy Mapping App Requirements.md  README.md  package.json  pnpm-lock.yaml
backend/: folio-mapper.spec  pyproject.toml  run_desktop.py
backend/app/: main.py  rate_limit.py
backend/app/middleware/: auth.py
backend/app/models/: embedding_models.py  export_models.py  graph_models.py  llm_models.py  mapping_models.py  parse_models.py  pipeline_models.py  synthetic_models.py
backend/app/routers/: embedding.py  export.py  github.py  llm.py  mapping.py  parse.py  pipeline.py  pricing.py  synthetic.py
backend/app/services/: auth.py  branch_config.py  branch_sort.py  export_interactive_html.py  export_scope.py  export_service.py  export_tree_html.py  file_parser.py  folio_service.py  hierarchy_detector.py  local_auth.py  nlp.py  owl_update_service.py  pricing_service.py  synthetic_generator.py  synthetic_prompt.py  text_parser.py
backend/app/services/embedding/: base.py  (+6 more)
backend/tests/: conftest.py  test_api.py  test_auth.py  test_embedding.py  test_export.py  test_export_interactive.py  test_export_tree.py  test_file_parser.py  test_github.py  test_graph.py  test_hierarchy_detector.py  test_llm.py  test_mandatory_fallback.py  test_mapping.py  test_nlp.py  test_owl_update.py  test_pipeline.py  test_rate_limit.py  test_search_expansion.py  test_security.py  test_see_also_traversal.py  test_stage1b_expand.py  test_synthetic.py  test_text_parser.py  test_url_validator.py
backend/tests/fixtures/: flat.csv  flat_with_header.csv  hierarchical.csv
(+51 files in other folders)
