[project]
name = "folio-mapper-backend"
version = "0.1.0"
description = "FOLIO Mapper backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.12",
    "folio-python>=0.2.0",
    "rapidfuzz>=3.0.0",
    "marisa-trie>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
